# Made-With-ML

./: Makefile  pyproject.toml  requirements.txt
madewithml/: predict.py  tune.py
notebooks/: madewithml.ipynb
scripts/: evaluation.bash  inference.bash  training.bash  tuning.bash
tests/code/: test_train.py
