# Black formatting
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.pyupgrade]
py39plus = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# Pytest cov
[tool.coverage.run]
omit=["madewithml/evaluate.py", "madewithml/serve.py"]

[tool.poetry]
name = "made-with-ml"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hyperopt = "0.2.7"
ipywidgets = "^8.0"
matplotlib = "3.7.1"
mlflow = "2.3.1"
nltk = "3.8.1"
numpy = "1.24.3"
numpyencoder = "0.3.0"
pandas = "2.0.1"
python-dotenv = "1.0.0"
ray = { version = "2.7.0", extras = ["air"] }
scikit-learn = "1.2.2"
snorkel = "0.9.9"
SQLAlchemy = "1.4.48"
torch = { version = "2.1.2+cu121", source = "pytorch" }
transformers = "4.28.1"
cleanlab = "2.3.1"
lime = "0.2.0.1"
seaborn = "0.12.2"
wordcloud = "1.9.2"
fastapi = "0.95.2"
typer = "0.9.0"
anyscale = "0.5.131"
openai = "0.27.8"
tqdm = "4.65.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "3.6.3"
mkdocs = "1.4.2"
mkdocstrings = { version = "0.21.2", extras = ["python"] }
black = "23.3.0"
flake8 = "6.0.0"
Flake8-pyproject = "1.2.3"
isort = "5.12.0"
pyupgrade = "3.3.2"
pre-commit = "3.2.2"

[tool.poetry.group.test.dependencies]
great-expectations = "0.16.5"
pytest = "7.3.1"
pytest-cov = "4.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
